SWIG (Simplified Wrapper and Interface Generator)

1/28/00 : loic
	  Apply automake everywhere
	  Keep configure scripts so that people are not *forced* to autoconf
          Keep sources generated by yacc so that compilation without yacc
	  is possible.
	  Source/LParse/cscanner.c: change lyacc.h into parser.h to please 
	  default yacc generation rules.
	  Use AC_CONFIG_SUBDIRS in configure.in instead of hand made script.
	  Update all relevant .cvsignore to include .deps
	  Fixed missing ; line 136 Source/Swig/swig.h

1/13/00 : beazley
          Fixed a number of minor end-of-file parsing problems in the
          preprocessor.

1/13/00 : beazley
          Added -freeze option that forces SWIG to freeze upon exit.
          This is only used as a debugging tool so that I can more
          easily examine SWIG's memory footprint.

1/13/00 : beazley
          Added patch to guile module for supporting optional arguments
          Patch contributed by Dieter Baron.

1/13/00 : loic
	  Added .cvsignore, Examples/.cvsignore, Source/DOH/Doh/.cvsignore 
	  Source/SWIG1.1/main.cxx: Fixed -I handling bug
	  Source/Modules1.1/java.cxx: fixed char* -> const char* warnings that are
	  errors when compiling with gcc-2.95.2
	  Source/SWIG1.1/main.cxx: cast const char* to char* for String_replace 
	  token and rep should really be const.

1/12/00 : beazley
          Added Harco's Java modules.

1/12/00 : beazley
          Revoked the %ifdef, %ifndef, %endif, %if, %elif, and %else 
          directives.  These are no longer needed as SWIG now has a real
          preprocessor.
          *** POTENTIAL INCOMPATIBILITY ***

1/12/00 : beazley
          Moved the documentation modules from the SWIG directory
          to the Modules directory (where they really should have been
          to begin with).

1/12/00 : beazley
          Removed the -stat option for printing statistics. The 
          statistics reporting was inadequate and mostly broken
          anyway.