@@ -2,4 +2,8 @@ include $(top_srcdir)/Makefile.common
 
 EXTRA_DIST = Include
 
+if EXPERIMENT
 SUBDIRS = DOH SWILL Modules1.1 Swig Preprocessor SWIG1.1 LParse Swim Experiment
+else
+SUBDIRS = DOH Modules1.1 Swig Preprocessor SWIG1.1 
+endif
